# vulkan_grid

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  notes.txt
resources/shaders/: flat.frag  flat_frag.spv
scripts/: compile.bat
shaders/: flat.frag  flat.vert  flat_vert.spv
src/: main.cpp
src/devices/: window.cpp  window.hpp
src/engine/: CMakeLists.txt  app.cpp  app.hpp  engine.cpp  engine.hpp
src/engine/devices/: window.cpp  window.hpp
src/engine/geometry/: mesh.cpp  mesh.hpp  vertex.hpp
src/engine/geometry/common/: square.hpp
src/engine/geometry/primitives/: square.hpp
src/engine/geometry/shapes/: line.hpp  square.hpp
src/engine/graphics/: command_buffer.cpp  command_buffer.hpp  command_pool.cpp  command_pool.hpp  context.cpp  context.hpp  game_object.cpp  game_object.hpp  graphics.cpp  graphics.hpp  instance.cpp  instance.hpp  logical_device.cpp  logical_device.hpp  material.cpp  material.hpp  physical_device.cpp  physical_device.hpp  pipeline.cpp  pipeline.hpp  render_pass.cpp  render_pass.hpp  shader.cpp  shader.hpp  surface.cpp  surface.hpp  swap_chain.cpp  swap_chain.hpp  texture.cpp  texture.hpp
src/engine/renderers/: sprite_renderer.cpp  sprite_renderer.hpp
src/engine/resources/: resource_manager.cpp  resource_manager.hpp
src/graphics/: graphics.cpp  graphics.hpp  instance.cpp  instance.hpp  physical_device.hpp
